# quiz_suite

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  build.sh  makefile
script/: list.ps1  list.sh  quiz_dist.py  quizdist_exam.py  quizdist_grade.py  quizdist_grade2d.py  quizdist_merge.py  quizdist_request.py  threshold.py
src/: config.hpp  config2.hpp  latex_headers.hpp  latex_headers2.hpp  latex_utils.hpp  quiz_classes.hpp  quiz_config.hpp  quiz_correct.cpp  quiz_database.hpp  quiz_gen.cpp  quiz_grade.cpp  quiz_lib.hpp  quiz_lib2.hpp  quiz_query.cpp  quiz_stats.cpp  quiz_utils.hpp  topic.hpp  utils_classes.hpp  utils_config.hpp  utils_database.hpp  utils_latex.hpp  utils_misc.hpp
vs/: quiz_suite.sln
vs/quiz_correct/: quiz_correct.vcxproj  quiz_correct.vcxproj.filters
vs/quiz_gen/: packages.config  quiz_gen.vcxproj  quiz_gen.vcxproj.filters
vs/quiz_grade/: quiz_grade.vcxproj  quiz_grade.vcxproj.filters
vs/quiz_query/: quiz_query.vcxproj  quiz_query.vcxproj.filters
vs/quiz_stats/: quiz_stats.vcxproj  quiz_stats.vcxproj.filters
